src/test/deca/syntax/valid/print/print-special-chars.deca
// Description:
//    Programme minimaliste affichant un nombre flottant.
//
// Résultats:
//    \
//    "
//
// Historique:
//    créé le 09/01/2025

{
    println("\\");
    println("\"");
}
